Solved update issues for both tables

--- a/src/main/resources/templates/animal-list.html
+++ b/src/main/resources/templates/animal-list.html
@@ -62,7 +62,8 @@
 <!-- Add Zoo and Main buttons -->
 <div>
     <a th:href="@{/}" class="btn">Main</a>
-    <a th:href="@{/api/animals/new}" class="btn">Add Animal</a>
+    <a th:href="@{/animals/new}" class="btn">Add Animal</a>
+    <a th:href="@{/zoos}" class="btn">Zoo List</a>
 </div>
 
 <h1>Animal List</h1>
