--- a/src/main/resources/templates/zoo-list.html
+++ b/src/main/resources/templates/zoo-list.html
@@ -63,6 +63,7 @@
 <div>
     <a th:href="@{/}" class="btn">Main</a>
     <a th:href="@{/zoos/new}" class="btn">Add Zoo</a>
+    <a th:href="@{/animals}" class="btn">Animal List</a>
 </div>
 
 <h2>Zoo List</h2>
