--- a/src/main/resources/templates/animal-list.html
+++ b/src/main/resources/templates/animal-list.html
@@ -8,24 +8,26 @@
 
     <style>
         body {
-            background-color: #add8e6;
+            background-color: #ffffff;
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
 
         h1 {
             color: #000080;
             text-align: center;
+            margin-top: 20px;
         }
 
         table {
             width: 70%;
             margin: 20px auto;
             border-collapse: collapse;
-            border-radius: 10px;
         }
 
         th, td {
-            padding: 10px;
+            padding: 15px;
             text-align: left;
             border: 1px solid #000080;
             border-radius: 10px;
@@ -47,11 +49,12 @@
         .btn {
             background-color: #000080;
             color: #ffffff;
-            padding: 10px;
+            padding: 15px;
             text-decoration: none;
             display: inline-block;
             margin: 10px;
             border-radius: 5px;
+            transition: background-color 0.3s;
         }
 
         .btn:hover {
